[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/AssignmentNode.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.1584, 0.1584, 0.18, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.745098, 0.745098, 0.745098, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="AssignmentNode" type="Control"]
margin_right = 1100.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
alignment = 1

[node name="ClassPanel" type="Panel" parent="HBoxContainer"]
margin_right = 353.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="HBoxContainer/ClassPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "COSC TEST CLASS NAME"
align = 1
valign = 1
autowrap = true

[node name="AssignmentPanel" type="Panel" parent="HBoxContainer"]
margin_left = 357.0
margin_right = 710.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )

[node name="Label" type="Label" parent="HBoxContainer/AssignmentPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Test Assignment Name"
align = 1
valign = 1
autowrap = true

[node name="DatePanel" type="Panel" parent="HBoxContainer"]
margin_left = 714.0
margin_right = 1068.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 4 )

[node name="Label" type="Label" parent="HBoxContainer/DatePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Feb 3 2023"
align = 1
valign = 1
autowrap = true

[node name="CloseButton" type="Button" parent="HBoxContainer"]
margin_left = 1072.0
margin_top = 2.0
margin_right = 1092.0
margin_bottom = 22.0
size_flags_vertical = 4
text = "X"

[connection signal="pressed" from="HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
